geting rid of all non bundle log calls, implementig deferrer